--- a/grumpy/Cargo.toml
+++ b/grumpy/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+flate2 = "1.0.30"
 gb-io = "0.7.1"
 string_cache = "0.8.7"
 vcf = "0.6.1"
