--- a/grumpy/Cargo.toml
+++ b/grumpy/Cargo.toml
@@ -8,8 +8,16 @@ edition = "2021"
 [dependencies]
 flate2 = "1.0.30"
 gb-io = "0.7.1"
+ordered-float = "4.2.1"
 string_cache = "0.8.7"
 vcf = "0.6.1"
 
 [profile.dev]
 opt-level = 3
+debug = 1
+
+[build]
+rustflags = ["-C", "symbol-mangling-version=v0"]
+
+[rust]
+debuginfo-level = 1
