--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "grumpy"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
+description = "Genetic analysis in Rust."
+license-file = "LICENSE"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
