--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
+description = "`gumpy` re-implementation in Rust"
 readme = "README-python.md"
-license = "LICENSE"
+license-file = "LICENSE"
 dynamic = ["version"]
 authors = [
     { name = "Jeremy Westhead", email = "jeremy.westhead@ndm.ox.ac.uk" }
