--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-description = "`gumpy` re-implementation in Rust"
+description = "gumpy re-implemented in Rust"
 readme = "README-python.md"
 license-file = "LICENSE"
 dynamic = ["version"]
